--- a/src/components/projects/ProjectDashboard/ProjectDashboard.css
+++ b/src/components/projects/ProjectDashboard/ProjectDashboard.css
@@ -16,7 +16,7 @@
   font-size: 2rem;
 }
 
-.project-info {
+.project-dashboard-info {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -24,7 +24,7 @@
   flex-wrap: wrap; /* Añadido para mejor responsividad */
 }
 
-.project-info span {
+.project-dashboard-info span {
   padding: 0.5rem 1rem;
   /* background: var(--background-color); */
   border-radius: 0.375rem;
@@ -60,14 +60,14 @@
   margin: 0 auto;
 }
 
-.stat-card {
+.project-dashboard-stat-card {
   background: var(--background-color);
   padding: 1.5rem;
   border-radius: 0.5rem;
   text-align: center;
 }
 
-.stat-card h3 {
+.project-dashboard-stat-card h3 {
   color: var(--text-secondary);
   font-size: 0.875rem;
   margin-bottom: 0.5rem;
@@ -75,22 +75,22 @@
   letter-spacing: 0.05em;
 }
 
-.stat-value {
+.project-dashboard-stat-value {
   color: var(--text-primary);
   font-size: 1.5rem;
   font-weight: 600;
 }
 
 /* Puedes añadir más estilos para otros estados */
-.stat-value.active {
+.project-dashboard-stat-value.active {
   color: var(--success-color);
 }
-.stat-value.completed {
+.project-dashboard-stat-value.completed {
   color: var(--primary-color);
 }
-.stat-value.on-hold {
+.project-dashboard-stat-value.on-hold {
   color: var(--warning-color);
 }
-.stat-value.cancelled {
+.project-dashboard-stat-value.cancelled {
   color: var(--danger-color);
 }
